@@ -1,3 +1,9 @@
+2011-07-25  Mark Ellis  <mark@mpellis.org.uk>
+
+	* configure.ac.in, dccm/synce-device.c - remove support for very
+	  old dbus-glib
+	* configure.ac.in - clean up checking for dbus
+
 2011-06-01  Mark Ellis  <mark@mpellis.org.uk>
 
 	* scripts/synceconnector.py.in - rename uses of hal-dccm to dccm
